--- a/src/css/index.css
+++ b/src/css/index.css
@@ -123,6 +123,19 @@ a.mail-link-new:hover {
   box-shadow: inset 0 -23px 0 #61d3a3;
 }
 
+.chatbubble a.mail-link {
+  text-decoration: none;
+  color: #222222;
+  opacity: inherit;
+  transition: 0.2s cubic-bezier(0.645, 0.045, 0.355, 1);
+  box-shadow: inset 0 -2px 0 #61d3a3;
+}
+
+.chatbubble a.mail-link:hover {
+  color: #222222;
+  box-shadow: inset 0 -25px 0 #61d3a3;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
