--- a/src/css/index.css
+++ b/src/css/index.css
@@ -114,12 +114,12 @@ a.mail-link-new {
 }
 
 a.mail-link:hover {
-  color: black;
+  color: #000f23;
   box-shadow: inset 0 -25px 0 #61d3a3;
 }
 
 a.mail-link-new:hover {
-  color: black;
+  color: #000f23;
   box-shadow: inset 0 -23px 0 #61d3a3;
 }
 
